<package>
  <name>decision_making_robot_examples</name>
  <version>1.0.0</version>
  <description>
    Use cases of decision_making on simulated robots
  </description>
  <maintainer email="igor@cogniteam.com">Igor Makhtes</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dm_lizi</run_depend>

  <export>
    <metapackage/>
  </export>

</package>